# haskell-range

./: Test.hs  haskell-range.cabal  range.cabal
Data/: Range.hs
Data/Range/: Internal.hs
