cabal-version:      2.4
name:               haskell-range
version:            1.0.0
author:             Olivia Taliesin
maintainer:         Olivia Taliesin <olivia@taliesin.dev>
license:            MIT
license-file:       LICENSE
synopsis:           Yeah
description:
  Whattup


extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  exposed-modules:  Data.Range
  build-depends:    base >=4.7 && <5

executable haskell-range
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010