cabal-version:      2.4
name:               range
version:            1.0.0
author:             Olivia Taliesin
maintainer:         Olivia Taliesin <olivia@taliesin.dev>
license:            MIT
license-file:       LICENSE
synopsis:           Yeah
description:
  Whattup


library
  default-language: Haskell2010
  exposed-modules:  Data.Range
  build-depends:    base >=4.7 && <5
  ghc-options:      -w