cabal-version:      2.4
name:               range
version:            1.0.0
author:             Olivia Taliesin
maintainer:         Olivia Taliesin <olivia@taliesin.dev>
license:            MIT
license-file:       LICENSE
synopsis:           Yeah
description:
  Whattup

library
  default-language: Haskell2010
  exposed-modules:  Data.Range
  other-modules:    Data.Range.Internal
  build-depends:    base >=4.7 && <5
  ghc-options:      -w

test-suite range-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  build-depends:
      base >=4.7 && <5
    , tasty >=1.5 && <2
    , tasty-hunit >=0.10.1 && <0.11
